# sam2demo

./: .gitignore  LICENSE  README.md  extract_data.py  pyproject.toml
data/images/Plate1/: O02_s1_w1.ome.tif
sam2demo/: demoimage_pred.ipynb  video_predictor_example.ipynb
